add infrastructure to do start=<time_in_seconds> to play command (#49)